--- a/src/sass/_pc.scss
+++ b/src/sass/_pc.scss
@@ -1,333 +1,24 @@
-/* all devices style
+/* PC devices style
 ---------------------------------------*/
 @import "compass";
 
-/*components*/
-
-/* body */
-
-body {
-  font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-  font-size:16px;
-  line-height:1.4;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  min-width: 320px !important;
-  background: #f7f8f9;
-  color:#345;
-  overflow-x: hidden;
-  -webkit-text-size-adjust: none;
-}
-div#contents{
-  width:100%;
-  position:absolute;
-  top:0;
-  left:250px;
-}
-
-div#contents header{
-  background-color: #66bb00;
-  height:49px;
-  border-bottom:1px solid #55aa11;
-  position:relative;
-}
-
-div#contents header a#slideBtn{
-  display:block;
-  width:49px;
-  height:49px;
-  background:url("../img/header_icon@2x.png") no-repeat center center;
-  background-size:49px 49px;
-  float:left;
-}
-
-div#contents header h1{
-  float:right;
-  margin:0;
-  padding:0;
-}
-
-div#contents ul{
-  list-style:none;
-  border-bottom:1px solid #d1d2d3;
-  margin:0;
-  padding:0;
-  overflow-y:hidden;
-  overflow-x:auto;
-  height:40px;
-  width:100%;
-  background: -moz-linear-gradient(
-    top, #fff 0%, #e7e8e9
-  );
-  background: -webkit-gradient(
-    linear,left top,left bottom,
-    from(#fff),
-    to(#e7e8e9)
-  );
-}
-
-div#contents li{
-  float:left;
-  width:63px;
-  padding:20px 0 18px;
-  font-size:14px;
-  font-weight:bold;
-  line-height:0;
-  text-align:center;
-  border-right:1px solid #e1e2e3;
-  margin:0;
-  text-shadow: 0 1px 0 #fff;
-}
-
-div#contents li:last-child{
-  border-right:none;
-}
-
-div#contents li.current{
-  float:left;
-  width:63px;
-  height:40px;
-  padding:20px 0 18px;
-  color:#fff;
-  font-size:14px;
-  font-weight:bold;
-  line-height:0;
-  text-align:center;
-  border-right:1px solid #e1e2e3;
-  margin:0;
-  text-shadow: 0 -1px 0 #aaa;
-    background: -moz-linear-gradient(
-    top, #d1d2d3 0%, #c1c2c3
-  );
-  background: -webkit-gradient(
-    linear,left top,left bottom,
-    from(#d1d2d3),
-    to(#c1c2c3)
-  );
-}
-
-div#contents li:last-child.current{
-  float:left;
-  width:63px;
-  height:40px;
-  padding:20px 0 18px;
-  color:#fff;
-  font-size:14px;
-  font-weight:bold;
-  line-height:0;
-  text-align:center;
-  margin:0;
-  text-shadow: 0 -1px 0 #aaa;
-    background: -moz-linear-gradient(
-    top, #d1d2d3 0%, #c1c2c3
-  );
-  background: -webkit-gradient(
-    linear,left top,left bottom,
-    from(#d1d2d3),
-    to(#c1c2c3)
-  );
-}
-
-div#contents h2{
-  background: -moz-linear-gradient(
-    top, #f7f8f9 0%, #eee
-  );
-  background: -webkit-gradient(
-    linear,left top,left bottom,
-    from(#f7f8f9),
-    to(#eee)
-  );
-  font-size:12px;
-  font-weight:bold;
-  border-top:1px solid #fff;
-  border-bottom:1px solid #ddd;
-  padding:8px 10px;
-  margin:0;
-  
-}
-
-div#contents div#target a{
-  text-decoration:none;
-}
-
-div#contents section{
-  border-bottom:1px solid #e7e8e9;
-  border-top:1px solid #fff;
-  padding:10px 0 10px 0;
-  overflow: hidden;
-  background:url("../img/arw@2x.png") no-repeat right center;
-  background-size:16px 16px;
-  width: 100%; /* for ie6 */
-}
-
-div#contents section h3{
-  font-size:100%;
-  line-height:1;
-  color:#334455;
-  overflow: hidden;
-  text-overflow:ellipsis;
-  white-space: nowrap;
-  width:220px;
-  margin:0;
-  padding:0;
-  font-weight:bold;
-}
-
-@media(min-width: 800px) {
-  div#contents section h3{
+@media(min-width:800px){
+  .appName{
     font-size:120%;
     width:50%;
   }
-}
 
-div#contents section img{
-  float:left;
-  margin:0 10px;
-  border-radius:10px;
-  border:1px solid #e7e8e9;
-}
-
-@media(min-width: 800px) {
-  div#contents section img{
-    width: 80px;
+  .icon{
+    width:72px;
+    @include border-radius(16px);
   }
-}
 
-div#contents section div.contents{
-  margin-left:70px;
-}
+  .target{
+    margin-bottom:90px;
+  } 
 
-div#contents section p{
-  margin:5px 0 0;
-  line-height:1;
-  font-size:12px;
-  color:#aaa;
-}
-
-div#target{
-  margin-bottom: 50px;
-}
-
-@media(min-width: 500px) { 
-  div#target { margin-bottom: 60px; } 
-}
-
-@media(min-width: 800px) {
-  div#target { margin-bottom: 90px; } 
-}
-
-div#recomend a{
-  text-decoration:none;
-}
-
-div#recomend section{
-  background:none;
-}
-
-div#sfb{
-  text-align:center;
-  margin-bottom:20px;
-}
-
-/**/
-
-div#wrapper{
-  width:100%;
-  position:relative;
-  top:0;
-  left:-250px;
-}
-
-div#universalMenu{
-  background-color: #333;
-  width:250px;
-  overflow-y:auto;
-  color:#fff;
-}
-
-
-div#universalMenu h2{
-  font-size:12px;
-  font-weight:bold;
-  margin:0 10px;
-  padding:5px 0;
-  border-bottom:1px solid #222;
-  text-shadow: 0 -1px 0 #000;
-}
-
-div#universalMenu ul{
-  margin:0 10px;
-  padding:0;
-  list-style:none;
-}
-
-
-div#universalMenu li{
-  padding:10px 0 10px 25px;
-  font-size:16px;
-  font-weight:bold;
-  text-shadow: 0 -1px 0 #000;
-  background:url("../img/btn_select_off@2x.png") no-repeat left 10px;
-  background-size:20px 20px;
-}
-
-div#universalMenu li.currentU{
-  background:url("../img/btn_select_on@2x.png") no-repeat left 10px;
-  background-size:20px 20px;
-}
-
-div#universalMenu #genreChanger{
-  margin:5px 10px 0;
-  width:210px;
-  padding:3px;
-}
-
-div#Uad{
-  padding-top:10px;
-}
-
-/**/
-div#loading{
-  width:100%;
-  text-align:center;
-  padding:50px 0;
-  background:url("../img/loading@2x.gif") no-repeat center center;
-  background-size:24px 24px;
-}
-
-.ad320{
-  width:100%;
-  min-height: 50px;
-  position: fixed;
-  text-align: center;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.8);
-}
-
-.qr { 
-  display: none;
-}
-
-@media(min-width: 800px) {
-  .qr {
-    position: fixed;
-    bottom: 100px;
-    right: 40px;
-    border-radius: 5px;
-    border:1px solid #ccc;
-    text-align: center;
-    background-color: #fff;
-    z-index: 10;
-    display: block;
-    color: #09c;
-    padding: 8px;
-  }
-  p{
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
+  .apprank-responsive{
+    width:728px;
+    height:90px;
   }
 }
